--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="nengajo">
-        <img src="media/スクリーンショット 2021-12-23 12.29.16.png" alt="">
+        <img src="https://github.com/yuyu-private/web-Nengajo/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202021-12-23%2012.29.16.png?raw=true" alt="">
     </div>
 
 </body>
